# Clinical_Computer_Use

./: .env.example  .gitignore  BLUEPRINT.md  README.md  pyproject.toml
docs/: BEHAVIOR_CHANGE_GOVERNANCE.md  CHECKPOINT_AND_AUTONOMY_POLICY.md  N0_N1_LIVE_SMOKE.md  N2_0_SURFACE_INTAKE.md  N2_0_SURFACE_MODEL_SPEC.md  OPERATING_CHARTER.md  PHI_ARTIFACT_POLICY.md  PHI_FIXTURE_AND_REPLAY_POLICY.md  RUN_LIFECYCLE_AND_ACTION_SCOPE.md
scripts/: n0_n1_live_smoke.ps1
src/clinical_computer_use/: __init__.py  approvals.py  main.py  myle_policy.py  myle_topology.py  openai_client.py  policies.py  prompts.py  runner.py  session.py  task_registry.py  traces.py
src/clinical_computer_use/browser/: __init__.py  playwright_harness.py  screenshot_loop.py
src/clinical_computer_use/cli/: main.py
src/clinical_computer_use/config/: __init__.py  settings.py
src/clinical_computer_use/domain/: __init__.py
src/clinical_computer_use/kernel/: __init__.py
src/clinical_computer_use/runtime/: __init__.py  artifact_policy.py  artifacts.py  autonomy.py  checkpoint_policy.py  (+11 more)
tests/: conftest.py
tests/integration/: test_apply_correction_cli.py  test_cli_parser.py
tests/replay/: test_replay_fixture_scaffold.py
tests/unit/: test_artifact_policy.py  test_contract_compiler.py  test_correction_compiler.py  test_correction_flow_runtime_effects.py  test_intent_gate.py  test_lifecycle_and_understanding.py  test_policy_gate.py  test_run_state_persistence.py  test_run_state_surface_state.py  test_runtime_scaffolds.py  test_surfaces.py  test_task_contract_schema.py  test_task_registry.py
(+51 files in other folders)
